# syspro

./: .gitignore  CHANGELOG.md  README.md  build_errors.txt  build_errors2.txt  build_errors3.txt  build_final.txt  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: KNOWN_ISSUES.md  PRODUCT_DOCS.md  USER_GUIDE.md
docs/adr/: adr-001-hybrid-architecture.md  adr-002-self-learning-memory.md  adr-003-rule-skill-priority.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build_errors.txt  error.txt  error2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: iso27001_report.ps1
src-tauri/src/: error.rs  lib.rs  main.rs  util.rs
src-tauri/src/modules/: ai.rs  audit.rs  batch.rs  cache.rs  cleaner.rs  disk.rs  mod.rs  network.rs  performance.rs  policy.rs  privacy.rs  rollback.rs  security.rs  system.rs  util.rs  webhook.rs
src/components/: ai-assistant.tsx  command-palette.tsx  floating-ai-chat.tsx
src/components/layout/: app-layout.tsx  sidebar.tsx  title-bar.tsx
src/components/ui/: progress.tsx
src/context/: ai-context.tsx  dashboard-context.tsx  i18n-context.tsx  policy-context.tsx  theme-context.tsx
src/pages/: ad-blocker.tsx  anti-spyware.tsx  app-junk.tsx  app-uninstaller.tsx  benchmarks.tsx  browser-extensions.tsx  cloud-cleaner.tsx  cpu-saver.tsx  dashboard.tsx  disk-analyzer.tsx  disk-defrag.tsx  disk-health.tsx  dns-protector.tsx  driver-updater.tsx  duplicate-finder.tsx  edge-manager.tsx  empty-folder-scanner.tsx  export-report.tsx  file-hider.tsx  file-recovery.tsx  file-shredder.tsx  file-splitter.tsx  firewall-manager.tsx  hosts-editor.tsx  internet-booster.tsx  junk-cleaner.tsx  large-file-finder.tsx  live-monitor.tsx  login-monitor.tsx  multi-user.tsx  network-monitor.tsx  one-click.tsx  password-generator.tsx  performance.tsx  popup-blocker.tsx  privacy-hardening.tsx  privacy.tsx  registry-cleaner.tsx  registry-defrag.tsx  restore-points.tsx  (+16 more)
src/store/: scan-store.ts
website/: index.html  script.js  style.css
